syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

enum AuthMethod
{
    AUTH_METHOD_UNKNOWN = 0;

    // Means of protocol (user name, password).
    AUTH_METHOD_BASIC = 1;
}

enum AuthStatus
{
    AUTH_STATUS_UNKNOWN                   = 0;
    AUTH_STATUS_SUCCESS                   = 1;
    AUTH_STATUS_NOT_SUPPORTED_METHOD      = 2;
    AUTH_STATUS_SESSION_TYPE_NOT_ALLOWED  = 3;
    AUTH_STATUS_BAD_USERNAME_OR_PASSWORD  = 4;
}

enum SessionType
{
    SESSION_TYPE_UNKNOWN        = 0;
    SESSION_TYPE_DESKTOP_MANAGE = 1;
    SESSION_TYPE_DESKTOP_VIEW   = 2;
    SESSION_TYPE_POWER_MANAGE   = 4;
    SESSION_TYPE_FILE_TRANSFER  = 8;
    SESSION_TYPE_SYSTEM_INFO    = 16;
}
